<resources>
    <string name="app_name">Personal Accountant</string>
    <string name="action_settings">Settings</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="pay_to">Paid to</string>
    <string name="pay_by">Received from</string>
    <string name="save">Save</string>
    <string name="new_record">New Record</string>
    <string name="type">Transaction Type</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="my_account">My Account</string>
    <string name="account">Account</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expenditure</string>
    <string name="balance">Your Account Balance</string>
    <string name="no_data">No Records to Display</string>
    <string name="use_tzs">Use TZS</string>
    <string name="currency_tzs">Currency set to TZS</string>
    <string name="currency_default">Default Currency: USD</string>
    <string name="use_comma">Use 1000 separator</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="preferences">Preferences</string>
    <string name="dialog_title_delete">Delete Record</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this record?</string>
    <string name="edit">Edit</string>
    <string name="set_date">Set Date</string>
</resources>
